added js domain generator

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <script src="src/app.js"></script>
     <div class="organizer">
-      <p id="excuse">My dog ate my homework</p>
+      <p id="domain"></p>
     </div>
   </body>
 </html>
