--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <script src="src/app.js"></script>
-    <div class="organizer">
+    <div class="organizer" id="org">
       <p id="domain"></p>
     </div>
   </body>
